# school-billing-api

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DECISIONS.md  Dockerfile  PLAN.md  PROMPT.md  README.md  SPEC.md  STATUS.md  TASK_01_MODELS.md  TASK_02_DAL.md  TASK_04_SCHEMAS.md  TASK_05_SERVICES.md  TASK_10_CI_BADGES_README.md  alembic.ini  docker-compose.yml  makefile  pyproject.toml  ralph.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 202602101630_initial_schema.py  2f4d3a9a6c7b_add_invoice_status_and_payment_kind.py  9fa3393ea7f1_add_invoice_status_and_payment_kind.py  b4648ffcc29d_initial_schema.py
app/: main.py
app/api/: auth.py  constants.py  deps.py  exception_handlers.py  exceptions.py  health.py  invoices.py  metrics.py  payments.py  schools.py  students.py
app/core/: logging.py  observability.py  security.py  settings.py
app/dal/: __init__.py  invoice.py  payment.py  school.py  student.py  update_types.py
app/dal/repos/: sqlalchemy_invoice_repo.py  sqlalchemy_payment_repo.py  sqlalchemy_school_repo.py  sqlalchemy_student_repo.py
app/db/: base.py  cli.py  seed.py  session.py
app/domain/: dtos.py  enums.py  errors.py
app/models/: __init__.py  invoice.py  payment.py  school.py  student.py
app/schemas/: __init__.py  auth.py  base.py  invoice.py  payment.py  school.py  statement.py  student.py  types.py
app/services/: billing_rules.py  invoices.py  payments.py  ports.py  schools.py  statements.py  students.py  use_cases.py
docs/codex/: TASK_03_REFACTOR.md  TASK_06_ROUTES.md  TASK_07_AUTH.md  TASK_08_MIGRATIONS_SEED.md  TASK_11_ASYNC_MIGRATION.MD  TASK_12_INVOICE_STATUS_AND_REFUNDS.md
tests/integration/: conftest.py  test_statements_integration.py
tests/unit/: test_api_routes_smoke.py  test_dal_smoke.py  test_db_cli_smoke.py  test_models_smoke.py  test_schemas_smoke.py  test_services_smoke.py  test_smoke.py
