[tool.poetry]
name = "mattilda-backend"
version = "0.1.0"
description = "Backend challenge: Schools, Students, Invoices, Payments"
authors = ["Federico Apelhanz"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.6"
uvicorn = {extras=["standard"], version="^0.40.0"}
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"

sqlalchemy = "^2.0.0"
psycopg = {extras = ["binary"], version = "^3.2.0"}

python-jose = {extras = ["cryptography"], version = "^3.3.0"}

prometheus-client = "^0.20.0"
uuid7 = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
ruff = "^0.6.0"
mypy = "^1.11.0"
pre-commit = "^3.7.0"
types-python-jose = "^3.3.4.0"

[tool.pytest.ini_options]
markers = [
  "smoke: fast unit tests, no db",
  "integration: tests that hit a real db"
]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
check_untyped_defs = true
disallow_untyped_defs = true
allow_untyped_decorators = true
warn_unused_ignores = true
show_error_codes = true
exclude = [
  "^tests/"
]

